evolving the blog post

--- a/_posts/2024-02-17-webxdc-m3.md
+++ b/_posts/2024-02-17-webxdc-m3.md
@@ -1,54 +1,99 @@
 ---
-title: Developing P2P web apps -- new docs and an open call!
+title: webxdc apps and reclaiming Peer-to-Peer web technology (PSST!)
 author: holga
 image: ../assets/blog/2023-08-xstore-appicons.png
 ---
 
-We've just refined and created several webxdc-development related resources: 
+While blockchain projects hailed "decentralization" and "Web3" as a paradigm change,
+spending billions of dollars and millions of development hours, 
+they failed to create a specification for packaging and running P2P web apps
+like the one [we started in 2022 with webxdc](https://delta.chat/en/2022-06-14-webxdc).
 
-- The new [webxdc.org/apps](https://webxdc.org/apps) page 
-  provides a search and download interface -- you can 
-  attach a downloaded file to a chat message, enabling 
-  chat-group members to run the app without them having
-  to visit the apps-page or download anything. 
+[webxdc apps](https://webxdc.org/apps) are HTML5 app container files
+which use the send/receive APIs provided by a supporting messenger.
+Webxdc app development and deployment is fundamentally easier 
+than developing for and maintaining 
+an application-specific always-online HTTP server. 
+But there are undeniably complications in arranging 
+consistent web app state across user's devices, 
+a typical issue for any Peer-to-Peer (P2P) networking system. 
 
-- The new [Shared Web application state](https://webxdc.org/docs/shared_state/index.html) 
-  chapter walks you through the theory and practise 
-  of using a P2P send/receive networking model 
-  instead of the centralizing HTTP client/server request model. 
-  The bulk of the new chapter was written by [ansuz](https://social.cryptography.dog/@ansuz)
-  also known for being development lead of Cryptpad for many years. 
+The new [Shared Web Application State chapter](https://webxdc.org/docs/shared_state/index.html) 
+walks you through theory and practise 
+of so called "conflict-free replicated data types" (CRDTs). 
+This new developer-focused chapter was mostly written by [ansuz](https://social.cryptography.dog/@ansuz)
+also known for his lead development role at Cryptpad 
+[for many years](https://blog.cryptpad.org/2022/12/29/stepping-down/). 
+The confluence of E2EE and P2P expertise is less surprising if you consider
+that any end-to-end encrypting application can not rely on 
+a central authority to resolve conflicts and "tell the truth". 
 
-- The refined [webxdc.org/docs](https://webxdc.org/docs) page
-  now begins with a "getting-started" page 
-  that allows to create and run your first web app within minutes. 
-  The docs generally got re-arranged and the 
-  [webxdc specification](https://webxdc.org/docs/spec/index.html)
-  now has table-of-content sections to ease discovery. 
-  It's still a very small spec you can read in a quarter hour, no worries :) 
+## Pixel: minimal CRDT-implementation for collaborative pixel-drawing (2.8 KB)
 
-- The [webxdc.org](https://webxdc.org) site was simplified,
-  points to "try out apps" and "develop own app" documentation,
-  and generally the whole site is not Delta Chat specific anymore
-  because all apps run on [the XMPP-messenger Cheogram](https://cheogram.com) as well. 
+Writing a webxdc app that offers a consistent user experience 
+can be done in few code and without pulling in dependencies. 
+The [Pixel](https://codeberg.org/webxdc/pixel) app allows 
+to set and clear pixels for anyone in a chat,
+and it resolves any concurrency conflicts by using "Lamport Clocks". 
+It does all of that in 150 lines of Javascript code without dependenciers,
+proving that CRDTs are fundamentally less complex than you might think. 
 
-## A basic cross-platform Editor using Prosemirror and yjs
+## A basic cross-platform Editor using Prosemirror and yjs (148KB)
 
 In around 400 lines of Code, 
 the [webxdc/editor](https://codeberg.org/webxdc/editor/src/branch/main/src) 
-implements a fully functioning end-to-end encryption offline-first editor
-that you can use in any chat group to collaboratively edit. 
+implements an end-to-end encrypting offline-first editor
+that you can use in any chat group to jointly edit a document. 
 The editor uses the [y-webxdc provider](https://www.npmjs.com/package/y-webxdc) 
-which allows easy integration of [yJS](https://yjs.dev/#features),
-a Conflict-free-Replicable-Data-Types (CRDT) implementation, also discussed in the 
-[Shared Web application state](https://webxdc.org/docs/shared_state/index.html) 
-chapter. 
+which integrates webxdc's send/receive API with [yJS](https://yjs.dev/#features),
+a leading Javascript implementation for Conflict-free-Replicable-Data-Types (CRDTs). 
 
 
-## Pixel: a 150 lines CRDT-implementation for collaborative pixel-drawing 
+## Checklist: Javascript app using automerge (98 KB) 
 
-XXX
+The widely used `checklist` app uses automerge, 
+another leading CRDT implementation effort. 
+Note that webxdc does not prescribe any particular framework 
+or data types for how apps arrange a distributed consistent user experience. 
 
-## Checklist: a 400 line plain Javascript app using automerge 
 
-XXX
+## More apps in the webxdc app store, all with "View Source" 
+
+The new [webxdc.org/apps](https://webxdc.org/apps) page 
+provides a straightforward search and download interface -- 
+you may attach a downloaded file to a chat message, 
+enabling chat-group members to run the app 
+without them having to download anything themselves. 
+A running app typically offers a "view source" option that directly
+gets you to the development repository. Collaboration and improvements welcome!
+
+## Getting started developing your own app
+
+The refined [development docs page](https://webxdc.org/docs) 
+now begins with a "getting-started" page 
+that allows to create and run your first web app within minutes. 
+
+The docs generally got re-arranged and the 
+[webxdc specification](https://webxdc.org/docs/spec/index.html)
+now has table-of-content sections to ease discovery. 
+
+No worries, it's still a very small spec you can read in a quarter hour :) 
+
+
+## PSST -- can you help to move P2P web apps forward with us? 
+
+There are more webxdc developments evolving for 2024,
+not the least because of crucial support from NLNET
+who administers much of the EU's Next-Generation-Internet funds. 
+However, most DC developers focus on evolving the webxdc spec and its messenger implementations. 
+Developing webxdc apps themselves only happens on the "side". 
+It's also fine -- there is a carpenter among us who freshly learned 
+HTML and Javascript and already has three apps in the store :)
+
+However, more experience and focus on user-facing web apps,
+including improving tooling, writing apps, helping newcomers etc. 
+would be very welcome. 
+If you are interested, or know someone who might be interested, 
+also in a paid contract, then please get in touch maybe 
+[by submitting an app](https://codeberg.org/webxdc/xdcget/src/branch/main/SUBMIT.md) 
+to indicate you are serious or playful -- ported casual games are also always welcome! :) 
