M3 blog: added screenshots

--- a/_posts/2024-02-17-webxdc-m3.md
+++ b/_posts/2024-02-17-webxdc-m3.md
@@ -1,7 +1,7 @@
 ---
 title: webxdc apps and reclaiming Peer-to-Peer web technology (PSST!)
 author: holga
-image: ../assets/blog/2023-08-xstore-appicons.png
+image: ../assets/blog/2024-02-xstore-in-chat.jpg
 ---
 
 While blockchain projects hailed "decentralization" and "Web3" as a paradigm change,
@@ -30,6 +30,8 @@ a central authority to resolve conflicts and "tell the truth".
 
 ## Pixel: minimal CRDT-implementation for collaborative pixel-drawing (2.8 KB)
 
+<img src="../assets/blog/screenshots/2024-02-14-delta-chat-webxdc-pixel.jpg" width="180" style="float:right; margin-left:1em;" />
+
 Writing a webxdc app that offers a consistent user experience 
 can be done in few code and without pulling in dependencies. 
 The [Pixel](https://codeberg.org/webxdc/pixel) app allows 
@@ -39,6 +41,8 @@ It does all of that in 150 lines of Javascript code without dependenciers,
 proving that CRDTs are fundamentally less complex than you might think. 
 
 ## A basic cross-platform Editor using Prosemirror and yjs (148KB)
+
+<img src="../assets/blog/screenshots/2024-02-14-delta-chat-webxdc-editor.jpg" width="180" style="float:right; margin-left:1em;" />
 
 In around 400 lines of Code, 
 the [webxdc/editor](https://codeberg.org/webxdc/editor/src/branch/main/src) 
@@ -50,6 +54,8 @@ a leading Javascript implementation for Conflict-free-Replicable-Data-Types (CRD
 
 
 ## Checklist: Javascript app using automerge (98 KB) 
+
+<img src="../assets/blog/screenshots/2024-02-14-delta-chat-webxdc-checklist.jpg" width="180" style="float:right; margin-left:1em;" />
 
 The widely used `checklist` app uses automerge, 
 another leading CRDT implementation effort. 
@@ -66,6 +72,8 @@ enabling chat-group members to run the app
 without them having to download anything themselves. 
 A running app typically offers a "view source" option that directly
 gets you to the development repository. Collaboration and improvements welcome!
+
+![A screenshot of xstore, opened in Delta Chat. In a "help" context menu, you can view the source code.](../assets/blog/2024-02-xstore-in-chat.jpg)
 
 ## Getting started developing your own app
 
