adding alt-text to images

--- a/_posts/2024-02-17-webxdc-m3.md
+++ b/_posts/2024-02-17-webxdc-m3.md
@@ -30,7 +30,7 @@ a central authority to resolve conflicts and "tell the truth".
 
 ## Pixel: minimal CRDT-implementation for collaborative pixel-drawing (2.8 KB)
 
-<img src="../assets/blog/screenshots/2024-02-14-delta-chat-webxdc-pixel.jpg" width="180" style="float:right; margin-left:1em;" />
+<img alt="a screenshot of pixel.xdc, the pixels show a rocket." src="../assets/blog/screenshots/2024-02-14-delta-chat-webxdc-pixel.jpg" width="180" style="float:right; margin-left:1em;" />
 
 Writing a webxdc app that offers a consistent user experience 
 can be done in few code and without pulling in dependencies. 
@@ -42,7 +42,7 @@ proving that CRDTs are fundamentally less complex than you might think.
 
 ## A basic cross-platform Editor using Prosemirror and yjs (148KB)
 
-<img src="../assets/blog/screenshots/2024-02-14-delta-chat-webxdc-editor.jpg" width="180" style="float:right; margin-left:1em;" />
+<img alt="a screenshot of editor.xdc, it shows example text." src="../assets/blog/screenshots/2024-02-14-delta-chat-webxdc-editor.jpg" width="180" style="float:right; margin-left:1em;" />
 
 In around 400 lines of Code, 
 the [webxdc/editor](https://codeberg.org/webxdc/editor/src/branch/main/src) 
@@ -55,7 +55,7 @@ a leading Javascript implementation for Conflict-free-Replicable-Data-Types (CRD
 
 ## Checklist: Javascript app using automerge (98 KB) 
 
-<img src="../assets/blog/screenshots/2024-02-14-delta-chat-webxdc-checklist.jpg" width="180" style="float:right; margin-left:1em;" />
+<img alt="a screenshot of checklist.xdc, showing example to do list items." src="../assets/blog/screenshots/2024-02-14-delta-chat-webxdc-checklist.jpg" width="180" style="float:right; margin-left:1em;" />
 
 The widely used `checklist` app uses automerge, 
 another leading CRDT implementation effort. 
