some refinements/streamlining/rewording

--- a/_posts/2024-02-17-webxdc-m3.md
+++ b/_posts/2024-02-17-webxdc-m3.md
@@ -1,11 +1,11 @@
 ---
-title: webxdc apps and reclaiming Peer-to-Peer web technology (PSST!)
+title: Webxdc or reclaiming Peer-to-Peer web technology (Psst!)
 author: holga
 image: ../assets/blog/2024-02-xstore-in-chat.jpg
 ---
 
 While blockchain projects hailed "decentralization" and "Web3" as a paradigm change,
-spending billions of dollars and millions of development hours, 
+spending billions of dollars and development hours, 
 they failed to create a specification for packaging and running P2P web apps
 like the one [we started in 2022 with webxdc](https://delta.chat/en/2022-06-14-webxdc).
 
@@ -33,14 +33,14 @@ a central authority to resolve conflicts and "tell the truth".
 <img alt="a screenshot of pixel.xdc, the pixels show a rocket." src="../assets/blog/screenshots/2024-02-14-delta-chat-webxdc-pixel.jpg" width="180" style="float:right; margin-left:1em;" />
 
 Writing a webxdc app that offers a consistent user experience 
-can be done in few code and without pulling in dependencies. 
+can be done in few code and without relying on any dependencies. 
 The [Pixel](https://codeberg.org/webxdc/pixel) app allows 
 to set and clear pixels for anyone in a chat,
 and it resolves any concurrency conflicts by using "Lamport Clocks". 
-It does all of that in 150 lines of Javascript code without dependenciers,
+It does that in 150 lines of plain Javascript code 
 proving that CRDTs are fundamentally less complex than you might think. 
 
-## A basic cross-platform Editor using Prosemirror and yjs (148KB)
+## A basic cross-platform Editor using Prosemirror and yJS (148KB)
 
 <img alt="a screenshot of editor.xdc, it shows example text." src="../assets/blog/screenshots/2024-02-14-delta-chat-webxdc-editor.jpg" width="180" style="float:right; margin-left:1em;" />
 
@@ -75,32 +75,50 @@ gets you to the development repository. Collaboration and improvements welcome!
 
 ![A screenshot of xstore, opened in Delta Chat. In a "help" context menu, you can view the source code.](../assets/blog/2024-02-xstore-in-chat.jpg)
 
+
+## Backward compatibility and longevity of webxdc apps
+
+Unlike mobile apps which require constant updating because of changing APIs and dependencies,
+and whose app stores inflict ever growing administrative work on developers, 
+webxdc apps can be written once and require no account, registration or compliance work. 
+The first 2022 webxdc apps still run unmodified on today's Delta Chat and Cheogram messengers,
+as well as on any potential other messaging project 
+adopting the [webxdc specification](https://webxdc.org/docs/spec/index.html). 
+
+
 ## Getting started developing your own app
 
 The refined [development docs page](https://webxdc.org/docs) 
 now begins with a "getting-started" page 
 that allows to create and run your first web app within minutes. 
+The [webxdc specification](https://webxdc.org/docs/spec/index.html)
+now has table-of-content sections to ease discovery
+but no worries, it's still a very small spec you can read in a quarter hour :) 
 
-The docs generally got re-arranged and the 
-[webxdc specification](https://webxdc.org/docs/spec/index.html)
-now has table-of-content sections to ease discovery. 
-
-No worries, it's still a very small spec you can read in a quarter hour :) 
+<video controls style="width:560px; max-width: 100%;"><source src="https://webxdc.org/assets/just-web-apps.mp4" type="video/mp4"><a href="https://www.youtube.com/watch?v=I1K4pBvb2pI">watch "just web apps" on youtube</a></video>
 
 
-## PSST -- can you help to move P2P web apps forward with us? 
+## PSST -- interested to help move P2P web apps forward with us? 
 
-There are more webxdc developments evolving for 2024,
+There are interesting webxdc developments evolving for 2024,
 not the least because of crucial support from NLNET
 who administers much of the EU's Next-Generation-Internet funds. 
-However, most DC developers focus on evolving the webxdc spec and its messenger implementations. 
+While we generally do not pre-announce our release planning 
+we already integrated [Iroh](https://github.com/n0-computer/iroh) for multi-device setup support
+and have [evolving experimental branches](https://github.com/deltachat/deltachat-core-rust/pull/5041) 
+to let webxdc apps use realtime P2P communication by means of [Iroh.network](https://iroh.network),
+one of the most interesting Rust efforts to come out of the ashes of Web3. 
+
+While Delta Chat developers co-evolve the webxdc spec and implementations,
+they typically focus on releasing Delta Chat native messenger apps on all platforms and stores.
 Developing webxdc apps themselves only happens on the "side". 
-It's also fine -- there is a carpenter among us who freshly learned 
-HTML and Javascript and already has three apps in the store :)
+This is not meant to say anything against doing a little app on the side!
+In fact, there is a carpenter by trade among us who freshly learned 
+HTML and Javascript and already has three apps in the store :) 
 
 However, more experience and focus on user-facing web apps,
-including improving tooling, writing apps, helping newcomers etc. 
-would be very welcome. 
+including improving tooling and example apps, helping newcomers etc. 
+would be very welcome and greatly help all evolving efforts. 
 If you are interested, or know someone who might be interested, 
 also in a paid contract, then please get in touch maybe 
 [by submitting an app](https://codeberg.org/webxdc/xdcget/src/branch/main/SUBMIT.md) 
