--- a/_posts/2024-02-17-webxdc-m3.md
+++ b/_posts/2024-02-17-webxdc-m3.md
@@ -76,15 +76,14 @@ gets you to the development repository. Collaboration and improvements welcome!
 ![A screenshot of xstore, opened in Delta Chat. In a "help" context menu, you can view the source code.](../assets/blog/2024-02-xstore-in-chat.jpg)
 
 
-## Backward compatibility and longevity of webxdc apps
+## Longevity and hassle-free creation and use of webxdc apps 
 
-Unlike mobile apps which require constant updating because of changing APIs and dependencies,
-and whose app stores inflict ever growing administrative work on developers, 
-webxdc apps can be written once and require no account, registration or compliance work. 
-The first 2022 webxdc apps still run unmodified on today's Delta Chat and Cheogram messengers,
+Webxdc apps can be written once and require no accounting, registration or compliance work. 
+They are [private by design and architecture](https://delta.chat/en/2023-05-22-webxdc-security) 
+and thus require no GDPR policies or cookie consent. 
+The first 2022 webxdc apps run unmodified on today's Delta Chat and Cheogram messengers,
 as well as on any potential other messaging project 
-adopting the [webxdc specification](https://webxdc.org/docs/spec/index.html). 
-
+adopting the straight forward [webxdc specification](https://webxdc.org/docs/spec/index.html). 
 
 ## Getting started developing your own app
 
@@ -98,7 +97,7 @@ but no worries, it's still a very small spec you can read in a quarter hour :)
 <video controls style="width:560px; max-width: 100%;"><source src="https://webxdc.org/assets/just-web-apps.mp4" type="video/mp4"><a href="https://www.youtube.com/watch?v=I1K4pBvb2pI">watch "just web apps" on youtube</a></video>
 
 
-## PSST -- interested to help move P2P web apps forward with us? 
+## Psst, interested to move P2P web apps forward with us? 
 
 There are interesting webxdc developments evolving for 2024,
 not the least because of crucial support from NLNET
