shorter subsection title

--- a/_posts/2024-02-17-webxdc-m3.md
+++ b/_posts/2024-02-17-webxdc-m3.md
@@ -63,7 +63,7 @@ Note that webxdc does not prescribe any particular framework
 or data types for how apps arrange a distributed consistent user experience. 
 
 
-## More apps in the webxdc app store, all with "View Source" 
+## More apps, all with "View Source" 
 
 The new [webxdc.org/apps](https://webxdc.org/apps) page 
 provides a straightforward search and download interface -- 
