--- a/_posts/2024-02-17-webxdc-m3.md
+++ b/_posts/2024-02-17-webxdc-m3.md
@@ -5,9 +5,10 @@ image: ../assets/blog/2024-02-xstore-in-chat.jpg
 ---
 
 While blockchain projects hailed "decentralization" and "Web3" as a paradigm change,
-spending billions of dollars and development hours, 
+spending billions of dollars and development hours in the last decade, 
 they failed to create a specification for packaging and running P2P web apps
-like the one [we started in 2022 with webxdc](https://delta.chat/en/2022-06-14-webxdc).
+like the one [we started in 2022 with webxdc](https://delta.chat/en/2022-06-14-webxdc),
+without any funding to begin with. 
 
 [webxdc apps](https://webxdc.org/apps) are HTML5 app container files
 which use the send/receive APIs provided by a supporting messenger.
