--- a/_posts/2024-02-17-webxdc-m3.md
+++ b/_posts/2024-02-17-webxdc-m3.md
@@ -114,7 +114,7 @@ they typically focus on releasing Delta Chat native messenger apps on all platfo
 Developing webxdc apps themselves only happens on the "side". 
 This is not meant to say anything against doing a little app on the side!
 In fact, there is a carpenter by trade among us who freshly learned 
-HTML and Javascript and already has three apps in the store :) 
+HTML and Javascript and already has published three apps in the store :) 
 
 However, more experience and focus on user-facing web apps,
 including improving tooling and example apps, helping newcomers etc. 
