--- a/_posts/2024-02-17-webxdc-m3.md
+++ b/_posts/2024-02-17-webxdc-m3.md
@@ -41,7 +41,7 @@ and it resolves any concurrency conflicts by using "Lamport Clocks".
 It does that in 150 lines of plain Javascript code 
 proving that CRDTs are fundamentally less complex than you might think. 
 
-## A basic cross-platform Editor using Prosemirror and yJS (148KB)
+## A basic cross-platform Editor using Prosemirror and Yjs (148KB)
 
 <img alt="a screenshot of editor.xdc, it shows example text." src="../assets/blog/screenshots/2024-02-14-delta-chat-webxdc-editor.jpg" width="180" style="float:right; margin-left:1em;" />
 
