--- a/_posts/2024-02-17-webxdc-m3.md
+++ b/_posts/2024-02-17-webxdc-m3.md
@@ -1,28 +1,35 @@
 ---
-title: Webxdc or reclaiming Peer-to-Peer web technology (Psst!)
-author: holga
-image: ../assets/blog/2024-02-xstore-in-chat.jpg
+title: Webxdc (Psst!) reclaiming Peer-to-Peer Web technology 
+author: olgax
+image: ../assets/logos/webxdc-centered.png
 ---
 
+<img src="../assets/logos/webxdc2.png" style="width:160px; float:right; clear:both; margin-left:.5em; margin-bottom:.2em;" alt="Webxdc Logo" />
 While blockchain projects hailed "decentralization" and "Web3" as a paradigm change,
-spending billions of dollars and development hours in the last decade, 
+expending billions of dollars and development hours in the last decade, 
 they failed to create even a baseline specification for packaging and running P2P web apps
-like the one [we started in 2022 with webxdc](https://delta.chat/en/2022-06-14-webxdc),
-without any funding to begin with. 
+like the one [we started in 2022 with webxdc](https://delta.chat/en/2022-06-14-webxdc).
 
 [webxdc apps](https://webxdc.org/apps) are HTML5 app container files
-which use the send/receive APIs provided by a supporting messenger.
-Webxdc app development and deployment is fundamentally easier 
-than developing for and maintaining 
+which use simple send/receive APIs provided by a supporting messenger.
+A webxdc app does not need to implement, and does not depend on, 
+any transport mechanism or messenger stack in particular. 
+It also does not need to implement onboarding and peer discovery 
+because all apps run on an already established chat-group context,
+tapping into the pre-existing user experience of billions of users. 
+
+## Learning how to program P2P webxdc apps 
+
+Webxdc app development is radically easier than developing for and maintaining 
 an application-specific always-online HTTP server. 
 But there are undeniably complications in arranging 
 consistent web app state across user's devices, 
-a typical issue for any Peer-to-Peer (P2P) networking system. 
-
+a typical issue for any P2P networking system. 
 The new [Shared Web Application State chapter](https://webxdc.org/docs/shared_state/index.html) 
 walks you through theory and practise 
 of so called "conflict-free replicated data types" (CRDTs). 
-This new developer-focused chapter was mostly written by [ansuz](https://social.cryptography.dog/@ansuz)
+This new app-developer focused chapter 
+was created by [ansuz](https://social.cryptography.dog/@ansuz)
 also known for his lead development role at Cryptpad 
 [for many years](https://blog.cryptpad.org/2022/12/29/stepping-down/). 
 The confluence of E2EE and P2P expertise is less surprising if you consider
@@ -50,64 +57,71 @@ the [webxdc/editor](https://codeberg.org/webxdc/editor/src/branch/main/src)
 implements an end-to-end encrypting offline-first editor
 that you can use in any chat group to jointly edit a document. 
 The editor uses the [y-webxdc provider](https://www.npmjs.com/package/y-webxdc) 
-which integrates webxdc's send/receive API with [yJS](https://yjs.dev/#features),
-a leading Javascript implementation for Conflict-free-Replicable-Data-Types (CRDTs). 
+which integrates webxdc's send/receive API with [Yjs](https://yjs.dev/#features),
+a popular Javascript implementation for Conflict-free-Replicable-Data-Types (CRDTs). 
 
 
 ## Checklist: Javascript app using automerge (98 KB) 
 
 <img alt="a screenshot of checklist.xdc, showing example to do list items." src="../assets/blog/screenshots/2024-02-14-delta-chat-webxdc-checklist.jpg" width="180" style="float:right; margin-left:1em;" />
 
-The widely used `checklist` app uses automerge, 
-another leading CRDT implementation effort. 
+People use `checklist` for shopping lists or preparing family travels every day. 
+`checklist` app uses automerge, another interesting CRDT implementation effort. 
 Note that webxdc does not prescribe any particular framework 
 or data types for how apps arrange a distributed consistent user experience. 
 
-
-## More apps, all with "View Source" 
+## More apps with "View Source" 
 
 The new [webxdc.org/apps](https://webxdc.org/apps) page 
 provides a straightforward search and download interface -- 
 you may attach a downloaded file to a chat message, 
 enabling chat-group members to run the app 
 without them having to download anything themselves. 
-A running app typically offers a "view source" option that directly
-gets you to the development repository. Collaboration and improvements welcome!
+A running app offers a "View Source" option that directly
+gets you to the development repository. Collaboration and forking welcome!
 
 ![A screenshot of xstore, opened in Delta Chat. In a "help" context menu, you can view the source code.](../assets/blog/screenshots/2024-02-14-delta-chat-webxdc-show-source.jpg)
 
 
 ## Longevity and hassle-free creation and use of webxdc apps 
 
-Webxdc apps can be written once and require no accounting, registration or compliance work. 
+Webxdc apps can be written once and require no hosting, accounting, registration or compliance work.
 They are [private by design and architecture](https://delta.chat/en/2023-05-22-webxdc-security) 
 and thus require no GDPR policies or cookie consent. 
 The first 2022 webxdc apps run unmodified on today's Delta Chat and Cheogram messengers,
 as well as on any potential other messaging project 
-adopting the straight forward [webxdc specification](https://webxdc.org/docs/spec/index.html). 
+adopting the straight forward [webxdc specification](https://webxdc.org/docs/spec/index.html),
+which now has good table-of-content markers to ease navigation. 
+But no worries, it's still a very small spec you can read in a quarter hour :) 
 
 ## Getting started developing your own app
 
 The refined [development docs page](https://webxdc.org/docs) 
 now begins with a "getting-started" page 
 that allows to create and run your first web app within minutes. 
-The [webxdc specification](https://webxdc.org/docs/spec/index.html)
-now has table-of-content sections to ease discovery
-but no worries, it's still a very small spec you can read in a quarter hour :) 
 
 <video controls style="width:560px; max-width: 100%;"><source src="https://webxdc.org/assets/just-web-apps.mp4" type="video/mp4"><a href="https://www.youtube.com/watch?v=I1K4pBvb2pI">watch "just web apps" on youtube</a></video>
 
 
 ## Psst, interested to move P2P web apps forward with us? 
 
-There are interesting webxdc developments evolving for 2024,
-not the least because of crucial support from NLNET
-who administers much of the EU's Next-Generation-Internet funds. 
+<img src="../assets/logos/logo_nlnet.svg" width="230" style="clear: both; float:right; margin-left:1em;" />
+There are many interesting webxdc developments evolving for 2024,
+not the least because of crucial funding support from NLNET
+who administers much of the EU's Next-Generation-Internet (NGI) funds,
+and recognizes webxdc as a promising technology and specification. 
+
 While we generally do not pre-announce our release planning 
 we already integrated [Iroh](https://github.com/n0-computer/iroh) for multi-device setup support
 and have [evolving experimental branches](https://github.com/deltachat/deltachat-core-rust/pull/5041) 
 to let webxdc apps use realtime P2P communication by means of [Iroh.network](https://iroh.network),
-one of the most interesting Rust efforts to come out of the ashes of Web3. 
+a well-done Rust port of [tailscale](https://tailscale.com/) which in turn is 
+a proven and well functioning existing P2P networking and holepunching stack. 
+We regard Iroh to be one of the most interesting efforts to arise out of the ashes of Web3. 
+Note that webxdc app developers will still just use send/receive APIs 
+and are neither dependent nor need to involve themselves 
+with the integration of `deltachat-core-rust` and `Iroh.network`. 
+Other messengers may use different ways to provide P2P connectivity for apps. 
 
 While Delta Chat developers co-evolve the webxdc spec and implementations,
 they typically focus on releasing Delta Chat native messenger apps on all platforms and stores.
@@ -117,9 +131,10 @@ In fact, there is a carpenter by trade among us who freshly learned
 HTML and Javascript and already has published three apps in the store :) 
 
 However, more experience and focus on user-facing web apps,
-including improving tooling and example apps, helping newcomers etc. 
-would be very welcome and greatly help all evolving efforts. 
+including improving tooling and example apps, 
+driving new webxdc API designs from real-world needs, helping newcomers etc. 
+would be very welcome and greatly needed to help all evolving efforts. 
 If you are interested, or know someone who might be interested, 
-also in a paid contract, then please get in touch maybe 
+also in a paid contract to help, then please get in touch maybe 
 [by submitting an app](https://codeberg.org/webxdc/xdcget/src/branch/main/SUBMIT.md) 
 to indicate you are serious or playful -- ported casual games are also always welcome! :) 
