--- a/_posts/2024-02-17-webxdc-m3.md
+++ b/_posts/2024-02-17-webxdc-m3.md
@@ -11,7 +11,7 @@ they failed to create even a baseline specification for packaging and running P2
 like the one [we started in 2022 with webxdc](https://delta.chat/en/2022-06-14-webxdc).
 
 [webxdc apps](https://webxdc.org/apps) are HTML5 app container files
-which use simple send/receive APIs provided by a supporting messenger.
+which use a simple send/receive APIs provided by a supporting messenger.
 A webxdc app does not need to implement, and does not depend on, 
 any transport mechanism or messenger stack in particular. 
 It also does not need to implement onboarding and peer discovery 
