--- a/_posts/2024-02-17-webxdc-m3.md
+++ b/_posts/2024-02-17-webxdc-m3.md
@@ -65,7 +65,8 @@ a popular Javascript implementation for Conflict-free-Replicable-Data-Types (CRD
 
 <img alt="a screenshot of checklist.xdc, showing example to do list items." src="../assets/blog/screenshots/2024-02-14-delta-chat-webxdc-checklist.jpg" width="180" style="float:right; margin-left:1em;" />
 
-People use `checklist` for shopping lists or preparing family travels every day. 
+People use [checklist](https://codeberg.org/webxdc/checklist) 
+for shopping lists or preparing family travels every day. 
 `checklist` app uses automerge, another interesting CRDT implementation effort. 
 Note that webxdc does not prescribe any particular framework 
 or data types for how apps arrange a distributed consistent user experience. 
