linkt o earlier background post and re-use an image from there

--- a/_posts/2024-02-17-webxdc-m3.md
+++ b/_posts/2024-02-17-webxdc-m3.md
@@ -136,6 +136,9 @@ including improving tooling and example apps,
 driving new webxdc API designs from real-world needs, helping newcomers etc. 
 would be very welcome and greatly needed to help all evolving efforts. 
 If you are interested, or know someone who might be interested, 
-also in a paid contract to help, then please get in touch maybe 
+also in a paid contract to help, an [earlier post provides more social background](https://delta.chat/en/2022-12-15-uidevjob#what-we-offer-and-how-we-dont-work). 
+Feel free to get in touch maybe also 
 [by submitting an app](https://codeberg.org/webxdc/xdcget/src/branch/main/SUBMIT.md) 
 to indicate you are serious or playful -- ported casual games are also always welcome! :) 
+
+![Picture of a core Delta Chat contributor in a DJ/party setting](../assets/blog/xi-xenia.jpg)
