better alt-text

--- a/_posts/2024-02-17-webxdc-m3.md
+++ b/_posts/2024-02-17-webxdc-m3.md
@@ -141,4 +141,4 @@ Feel free to get in touch maybe also
 [by submitting an app](https://codeberg.org/webxdc/xdcget/src/branch/main/SUBMIT.md) 
 to indicate you are serious or playful -- ported casual games are also always welcome! :) 
 
-![Picture of a core Delta Chat contributor in a DJ/party setting](../assets/blog/xi-xenia.jpg)
+![Picture of Delta Chat contributors in party in Kyiv](../assets/blog/xi-xenia.jpg)
