add fediverse link

--- a/_posts/2024-02-15-webxdc-m3.md
+++ b/_posts/2024-02-15-webxdc-m3.md
@@ -2,6 +2,7 @@
 title: Webxdc (Psst!) reclaiming Peer-to-Peer Web technology 
 author: olgax
 image: ../assets/logos/webxdc-centered.png
+com_id: 111935038589329716
 ---
 
 <img src="../assets/logos/webxdc2.png" style="width:160px; float:right; clear:both; margin-left:.5em; margin-bottom:.2em;" alt="Webxdc Logo" />
