--- a/_posts/2024-03-11-jumbo44.md
+++ b/_posts/2024-03-11-jumbo44.md
@@ -5,7 +5,8 @@ image: ../assets/blog/2023-11-green-checkmark-wide.png
 ---
 
 The 1.44 releases on all stores and platforms and bring
-several major usage improvements which we highlight in this post. 
+several often-requested usage improvements.
+We keep it brief because it's so much :) 
 
 ## Reactions ❤️  now supported on all platforms 
 
