--- a/_posts/2024-03-11-jumbo44.md
+++ b/_posts/2024-03-11-jumbo44.md
@@ -13,7 +13,10 @@ We keep it brief because it's so much :)
 Desktop and iOS apps can now send arbitrary reactions 
 on chat messages and surpassed Android support 
 which only offers a default set of reactions to send. 
-All platforms now show reactions. 
+Fun fact: we use the IETF [RFC9078](https://www.ietf.org/rfc/rfc9078.html) 
+experimental standard for transmitting reactions in e-mail. 
+See [Delta Chat standards](https://github.com/deltachat/deltachat-core-rust/blob/main/standards.md)
+for a list of other interoperability specs we are tapping into. 
 
 XXX screenshot on desktop and/or ios for showing/sending reactions
 
@@ -29,14 +32,13 @@ https://mailchat.pl or https://mehl.cloud .
 
 XXX screenshot with iOS "you have new messages" 
 
-## Much improved Desktop Multi-account handling 
+## New Desktop Multi-account sidebar
 
-The Desktop apps on all platforms now have an account sidebar
-so that changing an account is a single click
-and you also maintain a direct overview of unread messages. 
+The Desktop apps on all platforms now have a sidebar
+that shows and allows to select all your accounts,
+and eases a direct overview of unread messages in any accounts. 
 Moreover, system notifications now work, including on Flathub 
-where some bugs in system integration got fixed. 
-Using multiple accounts has never been easier! 
+where severe system integration bugs got fixed. 
 
 XXX screenshot with a sidebar and multiple accounts
 
@@ -47,10 +49,12 @@ or social media channel you have with friends,
 no need to show/scan a QR code although this is
 still a good option if you are standing next to each other 
 or are in a video call. 
-If a receiver clicks or taps your invite link 
-a [guaranteed end-to-end encrypted chat](https://delta.chat/en/2023-11-23-jumbo-42) 
-will be established and both can message each other
-without typing in any address and without ever using non-encrypted messages. 
+To create an invite link go to the "QR code" icon 
+and tap "share" to a link you can send via other messengers
+or other private channels.
+If a receiver taps on your invite link Delta chat will automatically activate
+and offer to accept the invite and establish 
+a [guaranteed end-to-end encrypted chat](https://delta.chat/en/2023-11-23-jumbo-42). 
 
 XXX screenshot involving a http link and a popup to start chatting 
 
@@ -72,10 +76,11 @@ XXX screenshot of someone about to send a statistics message
 
 # Other useful improvements with 1.44 
  
-- Android now signals how many unread messages are in other accounts 
+- Delta Android now signals how many unread messages are in other accounts 
 
 - Better and localized error messages if you try to send un-encrypted
-  messages from a chatmail address 
+  messages from a chatmail address that only allows outgoing mails in
+  encrypted form
 
 - Improved Desktop "settings" dialog and other UI refinements 
 
