better linking of chatmail instances

--- a/_posts/2024-03-11-jumbo44.md
+++ b/_posts/2024-03-11-jumbo44.md
@@ -27,8 +27,10 @@ addressing the long-lasting usability issue of
 "i didn't see your message and had to open the app first".
 Note that instant message delivery is currently 
 only available if you are using a chatmail address,
-as provided by https://nine.testrun.org, 
-https://mailchat.pl or https://mehl.cloud .
+as provided by three independent entities currently: 
+[nine.testrun.org](https://nine.testrun.org),
+[mailchat.pl](https://mailchat.pl) or [mehl.cloud](https://mehl.cloud)
+
 
 XXX screenshot with iOS "you have new messages" 
 
