--- a/_posts/2024-03-11-jumbo44.md
+++ b/_posts/2024-03-11-jumbo44.md
@@ -20,6 +20,8 @@ for a list of other interoperability specs we are tapping into.
 
 XXX screenshot on desktop and/or ios for showing/sending reactions
 
+<img alt="DeltaTouch chat with reactions" src="../assets/blog/assets/blog/2024-03-11-deltatouch-reactions.png" style="float:right;">
+
 ## Instant message delivery on Apple iOS devices
 
 The new Delta Chat 1.44 iOS app features instant message delivery,
