Add screenshot of iOS PUSH notification

--- a/_posts/2024-03-11-jumbo44.md
+++ b/_posts/2024-03-11-jumbo44.md
@@ -33,8 +33,8 @@ as provided by three independent entities currently:
 [nine.testrun.org](https://nine.testrun.org),
 [mailchat.pl](https://mailchat.pl) or [mehl.cloud](https://mehl.cloud)
 
+<img alt="iOS Lockscreen showing a notification" src="../assets/blog/2024-03-you-have-new-messages.jpg" width="400" />
 
-XXX screenshot with iOS "you have new messages" 
 
 ## New Desktop Multi-account sidebar
 
