Add screenshot of sidebar

--- a/_posts/2024-03-11-jumbo44.md
+++ b/_posts/2024-03-11-jumbo44.md
@@ -38,13 +38,14 @@ as provided by three independent entities currently:
 
 ## New Desktop Multi-account sidebar
 
+<img alt="DeltaTouch chat with reactions" src="../assets/blog/2024-03-sidebar.png" width="200" style="float:right;">
+
 The Desktop apps on all platforms now have a sidebar
 that shows and allows to select all your accounts,
 and eases a direct overview of unread messages in any accounts. 
 Moreover, system notifications now work, including on Flathub 
 where severe system integration bugs got fixed. 
 
-XXX screenshot with a sidebar and multiple accounts
 
 ## Invite links for getting in contact 
 
