adding various snapshots

--- a/_posts/2024-03-11-jumbo44.md
+++ b/_posts/2024-03-11-jumbo44.md
@@ -10,7 +10,9 @@ We keep it brief because it's so much :)
 
 ## Reactions ❤️  now supported on all platforms 
 
-Desktop and iOS apps can now send arbitrary reactions 
+![Select reactions to chat message](../assets/blog/desktop-reactions.png)
+
+Desktop, iOS and UbuntuTouch apps can now send arbitrary reactions 
 on chat messages and surpassed Android support 
 which only offers a default set of reactions to send. 
 Fun fact: we use the IETF [RFC9078](https://www.ietf.org/rfc/rfc9078.html) 
@@ -18,11 +20,10 @@ experimental standard for transmitting reactions in e-mail.
 See [Delta Chat standards](https://github.com/deltachat/deltachat-core-rust/blob/main/standards.md)
 for a list of other interoperability specs we are tapping into. 
 
-XXX screenshot on desktop and/or ios for showing/sending reactions
-
-<img alt="DeltaTouch chat with reactions" src="../assets/blog/2024-03-11-deltatouch-reactions.png" style="float:right;">
 
 ## Instant message delivery on Apple iOS devices
+
+![iOS Lockscreen showing a notification](../assets/blog/2024-03-you-have-new-messages.jpg)
 
 The new Delta Chat 1.44 iOS app features instant message delivery,
 addressing the long-lasting usability issue of 
@@ -33,12 +34,10 @@ as provided by three independent entities currently:
 [nine.testrun.org](https://nine.testrun.org),
 [mailchat.pl](https://mailchat.pl) or [mehl.cloud](https://mehl.cloud)
 
-<img alt="iOS Lockscreen showing a notification" src="../assets/blog/2024-03-you-have-new-messages.jpg" width="400" />
-
 
 ## New Desktop Multi-account sidebar
 
-<img alt="DeltaTouch chat with reactions" src="../assets/blog/2024-03-sidebar.png" width="200" style="float:right;">
+![Desktop multi-account sidebar](../assets/blog/desktop-sidebar.jpg)
 
 The Desktop apps on all platforms now have a sidebar
 that shows and allows to select all your accounts,
@@ -46,8 +45,9 @@ and eases a direct overview of unread messages in any accounts.
 Moreover, system notifications now work, including on Flathub 
 where severe system integration bugs got fixed. 
 
-
 ## Invite links for getting in contact 
+
+![Invite link in Whatsapp](../assets/blog/desktop-invite-link-show.jpg)
 
 You can now send invite links via any other messenger 
 or social media channel you have with friends,
@@ -61,9 +61,9 @@ If a receiver taps on your invite link Delta chat will automatically activate
 and offer to accept the invite and establish 
 a [guaranteed end-to-end encrypted chat](https://delta.chat/en/2023-11-23-jumbo-42). 
 
-XXX screenshot involving a http link and a popup to start chatting 
-
 ## Privacy preserving statistics on Android 
+
+![Submit encryption statistics to developers](../assets/blog/desktop-invite-link-show.jpg)
 
 Android has a new "Send statistics to Delta Chat's developers" option
 which performs some encryption related statistics in order to ensure
@@ -75,9 +75,6 @@ Statistics are generated as a text message which you sent yourself
 to the [collection bot](https://github.com/deltachat/self_reporting_bot/blob/main/self_reporting_bot.py) using guaranteed end-to-end encryption. 
 No personally identifable data remains as your reporting message 
 is removed on the collection-side after processing. 
-
-XXX screenshot of someone about to send a statistics message 
-
 
 # Other useful improvements with 1.44 
  
