--- a/_posts/2024-03-11-jumbo44.md
+++ b/_posts/2024-03-11-jumbo44.md
@@ -63,15 +63,15 @@ a [guaranteed end-to-end encrypted chat](https://delta.chat/en/2023-11-23-jumbo-
 
 ## Privacy preserving statistics on Android 
 
-![Submit encryption statistics to developers](../assets/blog/desktop-invite-link-show.jpg)
+![Submit encryption statistics to developers](../assets/blog/self-reporting-statistics.jpg)
 
 Android has a new "Send statistics to Delta Chat's developers" option
 which performs some encryption related statistics in order to ensure
-we weed out any "failed to decrypt" style messages. 
+we weed out and prevent any unneccessary "failed to decrypt" style messages. 
 Guaranteed end-to-end encryption should "just work" 
-and also not cause any troubles on multi-device usage. 
+and also not cause any troubles with multi-device usage. 
 You can help by going to "Send statistics" options in "Advanced settings". 
-Statistics are generated as a text message which you sent yourself 
+Statistics are generated as a text message which you send yourself 
 to the [collection bot](https://github.com/deltachat/self_reporting_bot/blob/main/self_reporting_bot.py) using guaranteed end-to-end encryption. 
 No personally identifable data remains as your reporting message 
 is removed on the collection-side after processing. 
