i think it's ready to go

--- a/_posts/2024-03-11-jumbo44.md
+++ b/_posts/2024-03-11-jumbo44.md
@@ -1,12 +1,12 @@
 ---
 title: Reactions, iOS Push Notifications and so much more!
-author: holga
+author: holga,r10s
 image: ../assets/blog/2023-11-green-checkmark-wide.png
 ---
 
 The 1.44 releases on all stores and platforms and bring
 several often-requested usage improvements.
-We keep it brief because it's so much :) 
+We keep talking about each improvement brief because there are so many :) 
 
 ## Reactions ❤️  now supported on all platforms 
 
@@ -27,7 +27,7 @@ for a list of other interoperability specs we are tapping into.
 
 The new Delta Chat 1.44 iOS app features instant message delivery,
 addressing the long-lasting usability issue of 
-"i didn't see your message and had to open the app first".
+"I didn't see your message and had to open the app first!".
 Note that instant message delivery is currently 
 only available if you are using a chatmail address,
 as provided by three independent entities currently: 
@@ -50,16 +50,15 @@ where severe system integration bugs got fixed.
 ![Invite link in Whatsapp](../assets/blog/desktop-invite-link-show.jpg)
 
 You can now send invite links via any other messenger 
-or social media channel you have with friends,
-no need to show/scan a QR code although this is
-still a good option if you are standing next to each other 
-or are in a video call. 
+or social media DM channel. 
 To create an invite link go to the "QR code" icon 
 and tap "share" to a link you can send via other messengers
 or other private channels.
 If a receiver taps on your invite link Delta chat will automatically activate
 and offer to accept the invite and establish 
 a [guaranteed end-to-end encrypted chat](https://delta.chat/en/2023-11-23-jumbo-42). 
+Of course, you can still use the regular show/scan QR code option
+if you are standing next to each other. 
 
 ## Privacy preserving statistics on Android 
 
@@ -73,7 +72,7 @@ and also not cause any troubles with multi-device usage.
 You can help by going to "Send statistics" options in "Advanced settings". 
 Statistics are generated as a text message which you send yourself 
 to the [collection bot](https://github.com/deltachat/self_reporting_bot/blob/main/self_reporting_bot.py) using guaranteed end-to-end encryption. 
-No personally identifable data remains as your reporting message 
+No personally identifable data remains as your statistics reporting message 
 is removed on the collection-side after processing. 
 
 # Other useful improvements with 1.44 
@@ -84,11 +83,11 @@ is removed on the collection-side after processing.
   messages from a chatmail address that only allows outgoing mails in
   encrypted form
 
-- Improved Desktop "settings" dialog and other UI refinements 
+- Improved Desktop "settings" dialog and many other Desktop and iOS UI refinements 
 
 - Creating contacts and changing your avatar now syncs to all your devices. 
 
-- Many many bug fixes 
+- Many bug fixes 
 
 For complete lists of changes see: 
 
