streamline first sentence

--- a/_posts/2024-03-11-jumbo44.md
+++ b/_posts/2024-03-11-jumbo44.md
@@ -4,9 +4,9 @@ author: holga,r10s
 image: ../assets/blog/2023-11-green-checkmark-wide.png
 ---
 
-The 1.44 releases on all stores and platforms and bring
-several often-requested usage improvements.
-We keep talking about each improvement brief because there are so many :) 
+The 1.44 releases on all stores and platforms bring
+several often-requested improvements.
+We keep talking about each one only briefly because there are so many :) 
 
 ## Reactions ❤️  now supported on all platforms 
 
