--- a/_posts/2024-03-11-jumbo44.md
+++ b/_posts/2024-03-11-jumbo44.md
@@ -1,7 +1,7 @@
 ---
 title: Reactions, iOS Push Notifications and so much more!
 author: holga,r10s
-image: ../assets/blog/2023-11-green-checkmark-wide.png
+image: ../assets/blog/notiheart.png
 ---
 
 The 1.44 releases on all stores and platforms bring
