--- a/_posts/2024-03-11-jumbo44.md
+++ b/_posts/2024-03-11-jumbo44.md
@@ -42,8 +42,8 @@ as provided by three independent entities currently:
 The Desktop apps on all platforms now have a sidebar
 that shows and allows to select all your accounts,
 and eases a direct overview of unread messages in any accounts. 
-Moreover, system notifications now work, including on Flathub 
-where severe system integration bugs got fixed. 
+System notifications now work for all accounts and you can also mute less important accounts.
+We also fixed many issues, including the Flathub release (which crashed when receiving messages).
 
 ## Invite links for getting in contact 
 
